[fix] tables wrapping on large viewports

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -269,6 +269,7 @@ main section table {
   @media screen and (min-width: 60em) {
     display: inline-table;
     width: 100%;
+    white-space: wrap;
   }
 
   th,
